--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.8",
+    "expo-blur": "~12.9.2",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
