--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "expo": "~50.0.8",
     "expo-blur": "~12.9.2",
     "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
     "expo-splash-screen": "~0.26.4",
